# MaestroAgent

./: .build-version  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  ENTROPY_RECOVERY.md  README.md  STATE.md  railway.json  worklog.md
download/MaestroAgent/backend/: README.md  alembic.ini  api_key.txt  conftest.py  pyproject.toml
download/MaestroAgent/backend/alembic/: env.py
download/MaestroAgent/backend/maestro_agents/: __init__.py  base.py  crew.py  debate.py  subagent.py  supervisor.py
download/MaestroAgent/backend/maestro_api/: __init__.py  council_adapters.py  legacy_guards.py  main.py  message_broker.py  oem_state.py  state.py  websocket.py
download/MaestroAgent/backend/maestro_auth/: __init__.py  api_keys.py  config.py  middleware.py  models.py  oauth.py  oidc.py  permissions.py  routes.py  saml.py  scim.py  security.py  sessions.py
download/MaestroAgent/backend/maestro_cli/: __init__.py  main.py
download/MaestroAgent/backend/maestro_cognitive_council/: __init__.py  acl_barrier.py  ask_bridge.py  audit_safety.py  behavioral_learning_engine.py  benchmark_types.py  briefing_bridge.py  calibration_primitives.py  consequence_path_router.py  copilot_bridge.py  delivery_governor.py  epistemic_barrier.py  governance_surface.py  institutional_autobiography.py  judgment_synthesizer.py  naked_llm_comparison.py  perspective.py  pilot_snapshot.py  preparation_bridge.py  reasoning_trace.py  situation_engine.py  situation_store.py  whisper_bridge.py  world_model_benchmark.py
download/MaestroAgent/backend/maestro_core/: __init__.py  checkpoint.py  context.py  engine.py  graph.py  state.py  streaming.py
download/MaestroAgent/backend/maestro_db/: base.py  db_helper.py  models.py  sqlite_compat.py
download/MaestroAgent/backend/maestro_hybrid/: __init__.py
download/MaestroAgent/backend/maestro_llm/: __init__.py  cost.py  providers.py  router.py
download/MaestroAgent/backend/maestro_loops/: __init__.py  conditions.py  handler.py  nested.py  types.py
download/MaestroAgent/backend/maestro_memory/: __init__.py  graph.py  long_term.py  manager.py  short_term.py  vector.py
download/MaestroAgent/backend/maestro_meta/: __init__.py
download/MaestroAgent/backend/maestro_nerve/: __init__.py  agents_internal.py  agents_product.py  agents_revenue.py  agents_strategy.py  base_agent.py  daily_briefing.py
download/MaestroAgent/backend/maestro_oem/: README.md  __init__.py  acl_resolver.py  active_cognition.py  adaptive_nudge.py  advanced_analytics.py  ambient_notifications.py  anticipation.py  ask_pipeline.py  assumption.py  attention.py  attention_signals.py  autocomplete.py  background_loop.py  calendar_awareness.py  calendar_source.py  candidate_pattern_store_sqlite.py  canvas.py  causal.py  channel_membership_store.py  checkpoint_store.py  cognitive_load.py  cold_start_mode.py  commitment_escalation.py  commitment_extractor.py  commitment_mutation_tracker.py  commitment_timeline_simulator.py  commitment_tracker.py  confidence.py  connection_manager.py  consciousness.py  consequentiality_filter.py  content_epistemic_classifier.py  contradiction.py  contradictions.py  conversation_store.py  coordination.py  coverage_assessor.py  crm_connector.py  cross_decision_patterns.py  (+119 more)
download/MaestroAgent/backend/maestro_personal/: __init__.py  ambient_context.py  briefing.py  consent.py  contradictions.py  crossover.py  dashboard.py  decision.py  evolution_report.py  expiry.py  habits.py  incognito.py  integration.py  intent_cascade.py  knowledge_graph.py  legacy.py  local.py  memory.py  mode.py  prediction_market.py  prepared_decisions.py  reflection.py  relationship_vault.py  store.py  why_engine.py
download/MaestroAgent/backend/maestro_plugins/: __init__.py  builtin_tools.py  loader.py  registry.py
download/MaestroAgent/backend/maestro_verify/: __init__.py  critic.py  evaluator.py  recovery.py  registry.py  sandbox.py
download/MaestroAgent/backend/plugins/: web_search.py
download/MaestroAgent/backend/sandbox/: Dockerfile  entrypoint.sh
download/MaestroAgent/backend/scripts/: build_sidecar.sh
download/MaestroAgent/backend/tests/: __init__.py  test_auth_defaults.py  test_core_engine.py  test_loops.py  test_memory.py  test_untested_modules.py
download/MaestroAgent/maestro-personal/: .dockerignore  .z-ai-config  CLUELY_KILLER_GAP.md  Dockerfile  RAILWAY_DEPLOY.md  README.md  _strip_inline_endpoints.py  pyproject.toml  railway.json  start_backend.bat
download/MaestroAgent/maestro-personal/.githooks/: commit-msg
download/MaestroAgent/maestro-personal/audit/: benchmark.yaml  correction_roundtrip_test.py  deploy_ops.py  deploy_ops_selftest.py  gate_red_green_proof.py  possessive_resolution_test.py  run_benchmark.py  scorer_red_green_proof.py
download/MaestroAgent/maestro-personal/ci_checks/: check_artifact_existence.py  check_baseline_derivation.py  check_default_install.py  check_full_suite.py  check_verdict_consistency.py
download/MaestroAgent/maestro-personal/docs/: API_SPLIT_PLAN.md  CLAIM_FREEZE.md  CONNECTOR_OAUTH_SETUP.md  DOGFOOD_INSTALL_GUIDE.md  EXTERNAL_AUDIT_REPORT.md  MOBILE_SCREENSHOTS_METHOD.md  RECRUIT_5_USERS.md  ROADMAP_COMPLETION_PLAN.md  ROADMAP_TO_9_OF_10.md  ROADMAP_TO_9_OF_10_V2.md  data_retention_policy.md  npm_audit_risk_acceptance.md  openapi_schema.json
download/MaestroAgent/maestro-personal/evaluation/: activation_benchmark.py  ask_benchmark_150.py  ask_eval.py  commitment_corpus_500.py  commitment_eval.py  comparison_benchmark_100.py  comparison_eval.py  copilot_benchmark_30.py  copilot_eval.py  cross_surface_contradiction_harness.py  four_way_comparison.py  prepare_benchmark_50.py  prepare_eval.py  silence_benchmark_100.py  silence_eval.py
download/MaestroAgent/maestro-personal/extension/: README.md  background.js  content.js  manifest.json  offscreen.js  panel.css  panel.html  panel.js
download/MaestroAgent/maestro-personal/mobile/: .gitignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
download/MaestroAgent/maestro-personal/scripts/: dump_openapi.py
(+1495 files in other folders)
