[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestroagent"
version = "0.1.0"
description = "MaestroAgent — the ultimate conductor for AI agents. Local-first, model-agnostic, hybrid LangGraph + CrewAI orchestration with advanced loops, dynamic sub-agents, and verifiable autonomy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MaestroAgent contributors" }]
keywords = ["agents", "orchestration", "langgraph", "crewai", "llm", "automation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core async + data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anyio>=4.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    # Orchestration primitives
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "crewai>=0.5",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "networkx>=3.3",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "ollama>=0.2",
    # Utilities
    "rich>=13.7",
    "typer>=0.12",
    "PyYAML>=6.0",
    "keyring>=25.2",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    # Auth — PyJWT is REQUIRED for OIDC signature verification (fail-closed)
    "PyJWT>=2.8",
    # Redis client for multi-instance WebSocket message broker (optional but recommended)
    "redis>=4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "respx>=0.21",
]
neo4j = ["neo4j>=5.20"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.3"]

[project.scripts]
maestro = "maestro_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["maestro_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "maestro_oem/tests", "maestro_api/tests", "maestro_auth/tests"]
