[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestroagent"
version = "0.1.0"
description = "MaestroAgent — the ultimate conductor for AI agents. Local-first, model-agnostic, hybrid LangGraph + CrewAI orchestration with advanced loops, dynamic sub-agents, and verifiable autonomy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MaestroAgent contributors" }]
keywords = ["agents", "orchestration", "langgraph", "crewai", "llm", "automation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core async + data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anyio>=4.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    # Orchestration primitives
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "crewai>=0.5",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "networkx>=3.3",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "ollama>=0.2",
    # Utilities
    "rich>=13.7",
    "typer>=0.12",
    "PyYAML>=6.0",
    "keyring>=25.2",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    # Auth — PyJWT is REQUIRED for OIDC signature verification (fail-closed)
    "PyJWT>=2.8",
    # Auth — SAML signature verification (python3-saml pulls xmlsec + lxml)
    "python3-saml>=1.16",
    "xmlsec>=1.3.13",
    "lxml>=5.2",
    # Redis client for multi-instance WebSocket message broker (optional but recommended)
    "redis>=4.6",
    # Observability — Prometheus /metrics endpoint (H6)
    "prometheus_client>=0.20",
    # C1 fix: Semantic retrieval — RecallEngine uses all-MiniLM-L6-v2 embeddings
    # for hybrid recall (semantic + temporal + entity + graph). Without this,
    # the system falls back to character n-gram TF-IDF, which returns 0 results
    # for most entity queries. This is a CORE dependency, not optional.
    "sentence-transformers>=2.2.0",
    # C1 fix: Temporal parsing — RecallEngine uses dateparser to interpret
    # "last month", "a few weeks ago", "yesterday" into date ranges for
    # temporal filtering. Without this, temporal recall is disabled.
    "dateparser>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "respx>=0.21",
]
neo4j = ["neo4j>=5.20"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.3"]

[project.scripts]
maestro = "maestro_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["maestro_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "maestro_api/tests",
    "maestro_auth/tests",
    "maestro_oem/tests",
    "maestro_personal/tests",
    "maestro_core/tests",
    "maestro_loops/tests",
    "maestro_memory/tests",
    "maestro_verify/tests",
    "maestro_llm/tests",
    "maestro_hybrid/tests",
    "maestro_meta/tests",
    "maestro_agents/tests",
    "maestro_plugins/tests",
    "maestro_cli/tests",
    "maestro_db/tests",
]

# W1.6: Audit CI command — runs the curated critical suite with correct env vars.
# Usage: python -m pytest --audit
# This is the command an auditor or CI system should run to verify the product.
[tool.pytest.ini_options.audit]
description = "Curated critical suite — the tests that verify the product's thesis-critical claims"
env = { MAESTRO_LOCAL_DEV = "true", MAESTRO_DEMO_SEED = "true" }
paths = [
    "maestro_oem/tests/test_critical01_delivery_gate_wired.py",
    "maestro_oem/tests/test_c1_sqlite_persistence.py",
    "maestro_oem/tests/test_c2_epistemic_types.py",
    "maestro_oem/tests/test_c3_prompt_injection.py",
    "maestro_oem/tests/test_c4_demo_entity_leak.py",
    "maestro_oem/tests/test_c5_hardcoded_confidence.py",
    "maestro_oem/tests/test_h01_epistemic_classifier_widened.py",
    "maestro_oem/tests/test_h05_source_authority.py",
    "maestro_oem/tests/test_h06_commitment_extraction.py",
    "maestro_oem/tests/test_h1_decorative_precision.py",
    "maestro_oem/tests/test_h2_hardcoded_templates.py",
    "maestro_oem/tests/test_c2_fallback_path.py",
    "maestro_oem/tests/test_c3_learning_loop.py",
    "maestro_oem/tests/test_governed_adaptation.py",
    "maestro_oem/tests/test_interaction_memory.py",
    "maestro_oem/tests/test_content_epistemic_classifier.py",
    "maestro_oem/tests/test_llm_narrator.py",
    "maestro_oem/tests/test_whisper_prioritization_routing.py",
    "maestro_oem/tests/test_phase1_commitment_lifecycle.py",
    "maestro_oem/tests/test_phase2_entity_scoping.py",
    "maestro_oem/tests/test_phase4_delivery_matrix.py",
    "maestro_oem/tests/test_phase5_persistence.py",
]
