[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestroagent"
version = "0.1.0"
description = "MaestroAgent — the ultimate conductor for AI agents. Local-first, model-agnostic, hybrid LangGraph + CrewAI orchestration with advanced loops, dynamic sub-agents, and verifiable autonomy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MaestroAgent contributors" }]
keywords = ["agents", "orchestration", "langgraph", "crewai", "llm", "automation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core async + data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anyio>=4.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    # Orchestration primitives
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "aiosqlite>=0.20",
    "networkx>=3.3",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "ollama>=0.2",
    # Utilities
    "rich>=13.7",
    "typer>=0.12",
    "PyYAML>=6.0",
    "keyring>=25.2",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    # Auth — PyJWT is REQUIRED for OIDC signature verification (fail-closed)
    "PyJWT>=2.8",
    # Auth — SAML signature verification (python3-saml pulls xmlsec + lxml)
    "python3-saml>=1.16",
    "xmlsec>=1.3.13",
    "lxml>=5.2",
    # Redis client for multi-instance WebSocket message broker
    "redis>=4.6",
    # Observability — Prometheus /metrics endpoint
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "respx>=0.21",
]
# Phase 1: Semantic retrieval — embeddings + temporal parsing + vector store.
# Without these, RecallEngine falls back to TF-IDF (less powerful but functional).
# Install with: pip install -e ".[dev,semantic]"
semantic = [
    "sentence-transformers>=2.2.0",
    "dateparser>=1.1.0",
    "chromadb>=0.5",
]
# Phase 1: CrewAI orchestration — multi-agent crew composition.
# Without this, crew-based agent orchestration is disabled.
# Install with: pip install -e ".[dev,agents]"
agents = [
    "crewai>=0.5",
]
# Phase 1: Browser tests — Playwright for frontend/a11y testing.
browser = [
    "playwright>=1.40",
]
# Phase 1: Live connector testing — real API access for connector contract tests.
live-connectors = [
    "google-auth-oauthlib>=1.2",
    "atlassian-python-api>=3.41",
]
# Phase 1: Postgres — for multi-instance/enterprise deployment.
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.3"]
neo4j = ["neo4j>=5.20"]

[project.scripts]
maestro = "maestro_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["maestro_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# CRITICAL-02 fix: test suite categorization markers.
# Default: run unit + integration only (hermetic, no external deps).
# Use -m slow / -m live / -m browser / -m perf to run those categories.
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests requiring live provider APIs (Slack, GitHub, etc.)",
    "browser: marks tests requiring Playwright browsers",
    "perf: marks tests as performance/load tests",
]
testpaths = [
    "tests",
    "maestro_api/tests",
    "maestro_auth/tests",
    "maestro_oem/tests",
    "maestro_personal/tests",
    "maestro_core/tests",
    "maestro_loops/tests",
    "maestro_memory/tests",
    "maestro_verify/tests",
    "maestro_llm/tests",
    "maestro_hybrid/tests",
    "maestro_meta/tests",
    "maestro_agents/tests",
    "maestro_plugins/tests",
    "maestro_cli/tests",
    "maestro_db/tests",
]

# Phase 1 fix: Removed invalid [tool.pytest.ini_options.audit] section.
# pytest does not support custom sub-sections under ini_options — this caused
# the "Unknown config option: audit" warning on every test run.
# The curated critical suite is now run via:
#   MAESTRO_LOCAL_DEV=true MAESTRO_DEMO_SEED=true python -m pytest maestro_oem/tests/test_critical01_delivery_gate_wired.py ...
