[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-personal"
version = "1.0.0"
description = "Maestro Personal — personal intelligence API (FastAPI on port 8766)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Maestro"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
maestro-personal = "maestro_personal_shell.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maestro_personal_shell = ["*.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "llm_integration: tests that require a live LLM (may be rate-limited in full suite)",
]
