[package]
name = "maestroagent-desktop"
version = "0.1.0"
description = "MaestroAgent desktop shell"
authors = ["MaestroAgent contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "maestroagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
which = "6"
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }

[features]
# By default Tauri runs in production mode.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
